--- a/pre/paper01.bib
+++ b/pre/paper01.bib
@@ -1,9 +1,11 @@
 @inproceedings{NhatZ2025,
-	author    = "Nhat and Vadim Zaytsev",
-	title     = "{An Introduction to Indirect Code Completion}",
-	booktitle = "{Pre-proceedings of the 24th Belgium-Netherlands Software Evolution Workshop (BENEVOL)}",
-	pages     = "5–10",
-	editor    = "Vadim Zaytsev and Fernando Castor",
-	url       = "https://benevol2025.github.io/pre/paper01.pdf",
-	year      = 2025,
+	author       = "Nhat and Vadim Zaytsev",
+	title        = "{An Introduction to Indirect Code Completion}",
+	booktitle    = "{Pre-proceedings of the 24th Belgium-Netherlands Software Evolution Workshop (BENEVOL)}",
+	pages        = "5–10",
+	editor       = "Vadim Zaytsev and Fernando Castor",
+	organization = "University of Twente",
+	address      = "Enschede, The Netherlands",
+	url          = "https://benevol2025.github.io/pre/paper01.pdf",
+	year         = 2025,
 }
